--- a/src/app.scss
+++ b/src/app.scss
@@ -6,26 +6,18 @@
     box-sizing: border-box;
 }
 
-ul[class],
-ol[class] {
-    padding: 0;
-}
-
 body,
 h1,
 h2,
-h3,
-h4,
 p,
 ul[class],
-ol[class],
 li {
     margin: 0;
 }
 
-ul[class],
-ol[class] {
+ul[class] {
     list-style: none;
+    padding: 0;
 }
 
 html {
@@ -33,7 +25,13 @@ html {
     color: #000;
 }
 
+body,
+main {
+    min-height: 100vh;
+}
+
 body {
+    position: relative;
     background-image: url('./assets/img/background.png');
 
     &::after {
@@ -43,15 +41,20 @@ body {
         height: 100%;
         left: 0px;
         top: 0px;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 5e-05) 49.88%, rgba(0, 0, 0, 0.5) 100%);
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 5e-05) 50%, rgba(0, 0, 0, 0.5) 100%);
         z-index: -1;
     }
 }
 
 main {
-    height: 100vh;
-    margin: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    // IE 11 FIX "align-items: center;"
+    &:after { 
+        content: '';
+        min-height: inherit;
+        font-size: 0;
+    }
 }
