--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,5 +1,5 @@
-$default-color: #1698D9;
-$default-hover-color: #2EA8E6;
-$selected-color: #D91667;
-$selected-hover-color: #E52E7A;
-$disabled-color: #B3B3B3;
+$default-color: #1698d9;
+$default-hover-color: #2ea8e6;
+$selected-color: #d91667;
+$selected-hover-color: #e52e7a;
+$disabled-color: #b3b3b3;
