--- a/src/components/Catalog/catalog.scss
+++ b/src/components/Catalog/catalog.scss
@@ -3,7 +3,7 @@
 
     &__header {
         margin-bottom: 24px;
-        font-family: 'Exo 2', sans-serif;
+        font-family: "Exo 2", sans-serif;
         font-size: 36px;
         line-height: 44px;
         font-weight: 100;
@@ -20,8 +20,8 @@
 
     &__item {
         margin: 0px 40px 30px;
-        
-        @media (max-width: 820px)  {
+
+        @media (max-width: 820px) {
             margin: 0px 20px 20px;
         }
     }
