--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -116,16 +116,16 @@ $border-radius: 12px;
         align-items: center;
         color: #fff;
         font-weight: 400;
+    }
 
-        .weight-value {
-            font-size: 42px;
-            line-height: 20px;
-        }
+    &__weight-value {
+        font-size: 42px;
+        line-height: 20px;
+    }
 
-        .weight-measure {
-            font-size: 21px;
-            line-height: 40px;
-        }
+    &__weight-measure {
+        font-size: 21px;
+        line-height: 40px;
     }
 
     &__description {
